# Etl-With-Python-Duckdb

./: README.md  app.py  dockerfile  duckdb.db  exemplo.env  pipeline-00.py  pipeline-01.py  pipeline_01.py  pipeline_02.py  pyproject.toml  requirements.txt
pasta_gdown/: vendas_07_01_2024.csv
sql/: analise_categoria.sql  analise_vendas.sql  create_table.sql  create_table_calculado.sql
