[tool.poetry]
name = "elt-python-duckdb"
version = "0.1.0"
description = ""
authors = ["Iasmim Horrana <horranaiasmim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gdown = "^5.2.0"
duckdb = "^1.0.0"
streamlit = "^1.35.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
